# chema

./: .travis.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
etc/: example.jsd  example.json  test.jsd
src/: compiler.rs  formatter.rs  main.rs  parser.rs
