[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "chema"
version = "0.1.0"

[dependencies]
combine = "2.5.2"
env_logger = "0.4.3"
lazy_static = "0.2.9"
log = "0.3.8"
regex = "0.2.2"
serde = "1.0.17"
serde_json = "1.0.5"
serde_yaml = "0.7.1"
structopt = "0.1.3"
structopt-derive = "0.1.3"
