[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "chema"
version = "0.0.5"
license = "Apache-2.0/MIT"
description = "An external DSL for JSON Schema"
readme = "README.md"
repository = "https://github.com/KeenS/chema"
keywords = ["json-schema", "swagger", "DSL", "cli"]
categories = ["development-tools"]

[dependencies]
combine = "2.5.2"
env_logger = "0.5.0"
lazy_static = "1.0"
log = "0.4.0"
regex = "0.2.2"
serde = "1.0.17"
serde_json = "1.0.5"
serde_yaml = "0.7.1"
structopt = "0.1.3"
structopt-derive = "0.1.3"
